# mirth_connect_mcp

./: .gitignore  .tmp-mirth-cookie.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
src/mirth_connect_mcp/: client.py  config.py  models.py  openapi_registry.py  server.py
src/mirth_connect_mcp/openapi/: openapi.json
src/mirth_connect_mcp/tools/: __init__.py  domain_tools.py
tests/: test_dispatch_and_client.py  test_openapi_registry.py
