[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirth_connect_mcp"
version = "0.1.1"
description = "FastMCP server for NextGen Connect (Mirth) API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "KCM"},
]
keywords = ["mcp", "fastmcp", "mirth", "nextgen-connect", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
license-files = ["LICENSE"]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "build>=1.2.2.post1",
    "twine>=5.1.1",
]

[project.scripts]
mirth-connect-mcp = "mirth_connect_mcp.server:run"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mirth_connect_mcp = ["openapi/*.json"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
